--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git@github.com:Katochimoto/inline-csp-webpack-plugin.git",
   "author": "Katochimoto <bufpost@yandex.ru>",
   "license": "MIT",
-  "peerDependencies": {
+  "dependencies": {
     "crypto": "^1.0.1"
   }
 }
